--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
 repos:
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v1.0.1
+    hooks:
+    -   id: clang-format
+        stages: [commit]
+        
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
