--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,18 +28,19 @@ repos:
       - id: black
         args: [ --line-length=120 ]
 
-  # - repo: local
-  #   hooks:
-  #     - id: pylint
-  #       name: pylint
-  #       entry: pylint
-  #       language: system
-  #       types: [python]
-  #       args:
-  #         [
-  #           "-rn", # Only display messages
-  #           "--rcfile=.pylintrc", # Link to your config file
-  #           "--load-plugins=pylint.extensions.docparams", # Load an extension
-  #           "--fail-under=8"
-  #         ]
-  #       pass: true
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args:
+          [
+            "-rn", # Only display messages
+            "--rcfile=.pylintrc", # Link to your config file
+            "--load-plugins=pylint.extensions.docparams", # Load an extension
+            "--fail-under=8"
+          ]
+        pass: true
+        exclude: test.py
